--- a/question_10_EventHandling.html
+++ b/question_10_EventHandling.html
@@ -1,3 +1,23 @@
+<!-- Problem Statement:
+
+Write a JavaScript code to make online booking of theatre tickets and calculate the total price based on the below conditions: 
+
+If seats to be booked are not more than 2, the cost per ticket remains $9.  
+
+If seats are 6 or more, booking is not allowed.  
+
+If seats to be booked are more than 2 but less than 5, based on the number of seats booked, do the following:
+
+Calculate total cost by applying a discount of 5, 7, 9, 11 percent, and so on for customer 1,2,3 till 5.
+
+Try the code with different values for the number of seats. 
+
+Write the following custom functions to implement given requirements:  
+
+calculateCost(seats): Calculate and display the total cost to be paid by the customer for the tickets he has bought. 
+
+calculateDiscount(seats): Calculate discount on the tickets bought by the customer. Invoke this function only when the user clicks on a link.  -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,6 +52,10 @@
             padding: 0;
             margin: 0;
         }
+        p{
+            display: contents;
+            font-weight: bold;
+        }
     </style>
 </head>
  
@@ -43,27 +67,33 @@
         <script>
             //Write the code to display the discounted price on click of the text
             document.write(`Costs per tickets: $9<br>`)
+            function notification(){                                  // defining alert function
+                alert(`Amount payable after discount: $${price}`);
+            }
             function price(booking,costPerTicket){    
                 document.write(`Total Number of Seats booked: ${booking}<br>`); 
                     if(booking <= 2){
                         document.write(`Total price: $${booking * costPerTicket}`);
                     }
-                    else if(2 < booking || booking > 6){
+                    else if(2 < booking && booking < 6){
+                        document.write(`Total price: $${booking * costPerTicket}<br>`);
+                        document.write(`Congratulations! ${booking} seats are eligible for discount.`);
+                        document.write(`<p onclick= "notification()">Apply</p>`)        // assigning alert and onclick functions in html using script
                         if(booking == 3){
-                            document.write(`Total price: $${booking * costPerTicket}<br>`);
-                            document.write(`Congratulations! ${booking} seats are eligible for discount.
-                            onclick = alert({booking*costPerTicket - (5/100) * booking * costPerTicket}`);
-                            // document.write(`Total price: $${booking*costPerTicket - ((5/100) * booking * costPerTicket)}`);
+                            return price = (`${booking*costPerTicket - ((5/100) * booking * costPerTicket)}`);
                         }
                         else if(booking == 4){
-                            document.write(`Total price: $${booking*costPerTicket - ((7/100) * booking * costPerTicket)}`);
+                            return price = (`${booking*costPerTicket - ((7/100) * booking * costPerTicket)}`);
                         }
                         else if(booking == 5){
-                            document.write(`Total price: $${booking*costPerTicket - ((9/100) * booking * costPerTicket)}`);
+                            return price = (`${booking*costPerTicket - ((9/100) * booking * costPerTicket)}`);
                         }
+                    else{
+                        document.write(`you can't book seats more than 5`);
+                    }
                 }
             }
-            price(3, 9);
+            price(4, 9);
         </script>
     </div>
 </body>
