--- a/question11_Objects/Object.html
+++ b/question11_Objects/Object.html
@@ -15,30 +15,31 @@ When the user clicks again, they should see a re-filled cone, a different headin
 <head>
     <title>DOM API for HTML modification</title>
 </head>
-<!-- <style>
-    img{
-        background-image: no-repeat;
-        border: 2px solid black
-        background-size: cover; 
-    } 
-</style> -->
 <body id="body" style="background-color:#b3deeb;text-align:center">
     <h1 id="hdr1">Here's your ice cream</h1>
     <img id="img1" src="/question11_Objects/image1.png" alt="Ice cream is not ready">
-    <!-- <img id="img2" src="/question11_Objects/image2.png"> -->
     <p id="p1" onclick="eat()">Click here to eat</p>
     <script>
         //Write the code here
-        let eat = function(){
+        function eat(){
             const body = document.querySelector('#body');
             const heading = document.getElementById('hdr1');
             const image1 = document.querySelector('#img1');
-            // const image2 = document.getElementById('img2');
             const para = document.getElementById('p1');
-            body.style.backgroundColor = "green";
-            para.innerText = "Click to Re-fill!"
-            heading.innerText = "Hope you liked it!"
-            // document.image1.backgroundImage = "url('/question11_Objects/image2.png')"
+            if (e = true){
+                body.style.backgroundColor = "#9af09a";
+                heading.innerText = "Hope you liked it!"
+                para.innerText = "Click to Re-fill!"
+                document.querySelector("#img1").src = ('/question11_Objects/image2.png');
+            }
+            
+            else{
+                console.log("hello");
+                body.style.backgroundColor = "#b3deeb";
+                heading.innerText = "Here's a re-filled cone!"
+                para.innerText = "Enjoy yourself!"
+                document.querySelector("#img1").src = ('/question11_Objects/image1.png');
+            }
         }
     </script>
 </body>
